Started a report for Ventrafiken.

--- a/notebooks/07.04_uraniborg_savings.ipynb
+++ b/notebooks/07.04_uraniborg_savings.ipynb
@@ -14,42 +14,7 @@
     "tags": []
    },
    "source": [
-    "# Clean : trip statistics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68ad8479",
-   "metadata": {
-    "papermill": {
-     "duration": 0.015653,
-     "end_time": "2021-05-21T15:53:18.565325",
-     "exception": false,
-     "start_time": "2021-05-21T15:53:18.549672",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "# Purpose\n",
-    "There are some outliers in the trip statistics that will need to be removed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c17804fe",
-   "metadata": {
-    "papermill": {
-     "duration": 0.015622,
-     "end_time": "2021-05-21T15:53:18.643400",
-     "exception": false,
-     "start_time": "2021-05-21T15:53:18.627778",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "# Setup"
+    "# Uraniborg"
    ]
   },
   {
@@ -64,7 +29,9 @@
      "start_time": "2021-05-21T15:53:18.674675",
      "status": "completed"
     },
-    "tags": []
+    "tags": [
+     "remove_cell"
+    ]
    },
    "outputs": [],
    "source": [
@@ -132,7 +99,10 @@
      "start_time": "2021-05-21T15:53:22.390667",
      "status": "completed"
     },
-    "tags": []
+    "tags": [
+     "remove_cell",
+     "remove_output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -140,37 +110,8 @@
     "df_stat = catalog.load('uraniborg.trip_statistics_clean')\n",
     "#df_stat = catalog.load('uraniborg.trip_statistics')\n",
     "df_stat['start_time'] = pd.to_datetime(df_stat['start_time'], utc=True)\n",
-    "df_stat['end_time'] = pd.to_datetime(df_stat['end_time'], utc=True)\n",
-    "df_stat.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbc9d5f4-d0f1-479a-afb3-00aa98d106ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_stat.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9493ba73",
-   "metadata": {
-    "papermill": {
-     "duration": 0.171935,
-     "end_time": "2021-05-21T15:53:22.812733",
-     "exception": false,
-     "start_time": "2021-05-21T15:53:22.640798",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_stat.shape"
+    "df_stat['end_time'] = pd.to_datetime(df_stat['end_time'], utc=True);\n",
+    "#df_stat.describe()"
    ]
   },
   {
@@ -185,11 +126,13 @@
      "start_time": "2021-05-21T15:53:22.828255",
      "status": "completed"
     },
-    "tags": []
+    "tags": [
+     "remove_cell"
+    ]
    },
    "outputs": [],
    "source": [
-    "df_stat.info()"
+    "#df_stat.info()"
    ]
   },
   {
@@ -212,51 +155,9 @@
     "df_stat['item'] = 'raw'\n",
     "df_clean = df_stat.copy()\n",
     "df_clean['item'] = 'clean'\n",
-    "df_clean.dropna(subset=['E','consumption'], inplace=True)\n",
-    "mask = df_clean['E'] > df_clean['E'].quantile(0.01) \n",
-    "df_clean = df_clean.loc[mask].copy()\n",
-    "\n",
-    "df_compare = df_stat.append(df_clean, ignore_index=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "798e1abe-b0de-45be-902d-49149ba29c00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.displot(df_compare, x='distance', hue='item', aspect=3);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a078c7f-4eac-4b71-9449-24b3d39dd091",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.displot(df_compare, x='trip_time', hue='item', aspect=3);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1768cfa9-9f0e-4f91-b4f9-ecedaf4cb7d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.displot(df_compare, x='consumption', hue='item', aspect=3);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "939a40d0-4e48-4aea-abb2-6eaf9e96fb25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.displot(df_clean, x='E', hue='trip_direction', aspect=3)"
+    "df_clean.dropna(subset=['consumption'], inplace=True)\n",
+    "#mask = df_clean['E'] > df_clean['E'].quantile(0.01) \n",
+    "#df_clean = df_clean.loc[mask].copy()"
    ]
   },
   {
@@ -271,69 +172,17 @@
    "outputs": [],
    "source": [
     "facegrid = sns.relplot(data=df_clean, x='start_time',y='consumption', height=3, aspect=3);\n",
-    "facegrid.set_ylabels('(Fuel consumption per trip) [l]')"
+    "facegrid.set_ylabels('(Fuel consumption per trip) [l]');"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aabe0e4-b3e5-497b-b15b-8858e095d03d",
+   "id": "939a40d0-4e48-4aea-abb2-6eaf9e96fb25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = df_clean.set_index('start_time')\n",
-    "df_.sort_index(inplace=True)\n",
-    "\n",
-    "df_['dt'] = np.concatenate(([0],np.diff((df_.index-df_.index[0]).total_seconds())))\n",
-    "\n",
-    "mask = df_['dt'] > 60*60*24*5\n",
-    "\n",
-    "mask[0]=True\n",
-    "df_.loc[mask,'group'] = np.arange(mask.sum())\n",
-    "df_['group'] = df_['group'].fillna(method='pad')\n",
-    "\n",
-    "fig,ax=plt.subplots()\n",
-    "\n",
-    "#df_.plot(y='dt', ax=ax)\n",
-    "df_.loc[mask].plot(y='dt', style='ro', ax=ax)\n",
-    "\n",
-    "for group, df_group in df_.groupby(by='group'):\n",
-    "    \n",
-    "    df_group.plot(y='dt', label=group, ax=ax)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6eff972-3914-49ad-84bd-b4aaf575bd50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "window = \"30D\"\n",
-    "\n",
-    "df_rolling = pd.DataFrame()\n",
-    "\n",
-    "for group, df_group in df_.groupby(by='group'):\n",
-    "\n",
-    "    df_rolling_ = df_group.rolling(window=window).mean().iloc[10:]\n",
-    "    df_rolling_['group'] = group\n",
-    "    df_rolling = df_rolling.append(df_rolling_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d69e45a2-1125-4cf1-b9d6-069af52cd868",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "df_expanding = df_.expanding().mean().iloc[20:]\n",
-    "\n",
-    "facegrid = sns.relplot(data=df_rolling, x='start_time', y='consumption', height=3, aspect=3);\n",
-    "facegrid.set_ylabels('(Fuel consumption per trip) [l]')"
+    "sns.displot(df_clean, x='consumption', hue='trip_direction', aspect=3);"
    ]
   },
   {
@@ -343,12 +192,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_ = df_clean.set_index('start_time')\n",
+    "df_.sort_index(inplace=True)\n",
+    "\n",
     "tänd = '2021-04-01'\n",
     "utbildning = '2021-05-11'\n",
     "\n",
     "df_.loc[:tänd,'period'] = 'släckta skärmar'\n",
     "df_.loc[tänd:utbildning,'period'] = 'tända skärmar'\n",
     "df_.loc[utbildning:,'period'] = 'efter utbildning'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8edcd45-f570-4ea3-9a41-3f99c434f20d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_expanding = df_.expanding().mean()"
    ]
   },
   {
@@ -370,28 +232,49 @@
     "\n",
     "\n",
     "\n",
-    "df_rolling.plot(y='consumption', label=f'rolling mean ({window})', ax=ax, style='m-')\n",
-    "df_expanding.plot(y='consumption', label=f'expanding mean', ax=ax, style='c-')\n",
+    "#df_rolling.plot(y='consumption', label=f'rolling mean ({window})', ax=ax, style='m-')\n",
+    "df_expanding.loc[tänd:].plot(y='consumption', label=f'expanding mean', ax=ax, style='k-', lw=3)\n",
+    "ax.set_ylabel('Fuel consumption [liters]')\n",
     "ax.legend();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7eed6e-049c-4388-855b-8a7c5439ae44",
+   "id": "0cb14def-7d7c-47dc-a3b8-13f97235d329",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#import plotly.graph_objects as go\n",
+    "#\n",
+    "#fig1 = px.scatter(df_, y='consumption', color='period')\n",
+    "#fig2 = px.line(df_expanding.loc[tänd:], y='consumption')\n",
+    "#fig = go.Figure(fig1.data + fig2.data)\n",
+    "#fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74441ce4-35bc-498d-8a21-39948516fc5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig,ax=plt.subplots()\n",
     "fig.set_size_inches(20,7)\n",
     "\n",
-    "for group, df_rolling_group in df_rolling.groupby(by='group'):\n",
-    "    df_rolling_group.plot(y='consumption', label=f'rolling mean', ax=ax, style='-')\n",
+    "styles = ['k.','y.','b.']\n",
+    "for style, (period, df_period) in zip(styles,df_.groupby(by='period', sort=False)):\n",
+    "    df_period.plot(y='w', label=period, ax=ax, style=style)\n",
     "\n",
-    "\n",
-    "df_expanding.plot(y='consumption', label=f'expanding mean', ax=ax, style='-')\n",
-    "\n",
-    "#ax.set_ylim(0.85*df_before['consumption'].mean(),1.1*df_before['consumption'].mean())\n",
+    "df_expanding.loc[tänd:].plot(y='w', label=f'expanding mean', ax=ax, style='k-', lw=3)\n",
+    "ylims = ax.get_ylim()\n",
+    "ax.set_ylim((0,ylims[1]))\n",
+    "ax.set_ylabel('Wind speed [m/s]')\n",
     "ax.legend();"
    ]
   },
@@ -402,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interesting = ['sog','consumption','E','distance','aw']\n",
+    "interesting = ['sog','consumption','E','distance','w']\n",
     "df_compare = df_.groupby(by='period', sort=False).mean()[interesting]\n",
     "df_compare"
    ]
@@ -420,16 +303,8 @@
     "\n",
     "columns = df_changes.columns[~(df_changes==0).all(axis=0)]\n",
     "rows = df_changes.index[~(df_changes==0).all(axis=1)]\n",
-    "df_changes = df_changes.loc[rows,columns].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e40ea76-0106-469a-a6c0-86d8e8d478ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_changes = df_changes.loc[rows,columns].copy()\n",
+    "\n",
     "(df_changes/df_compare.loc['släckta skärmar']['consumption'])*100"
    ]
   },
