--- a/docs/energy_saving_potential/following_trips.ipynb
+++ b/docs/energy_saving_potential/following_trips.ipynb
@@ -76,7 +76,8 @@
     "from d2e2f.visualization import visualize\n",
     "import re\n",
     "from myst_nb import glue\n",
-    "from scipy.integrate import cumtrapz"
+    "from scipy.integrate import cumtrapz\n",
+    "plt.style.use('presentation')"
    ]
   },
   {
@@ -257,16 +258,6 @@
     "'Trip distance [m]' : '{:.0f}',\n",
     "}\n",
     "glue('tab:mean',df_mean.style.format(formatter))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6df1dff3-0fb4-4d2b-b913-bcce71e38485",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_mean.to_clipboard()"
    ]
   },
   {
@@ -677,6 +668,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "020fb7c0-438d-486f-b0b1-214beb3dd204",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "287f3064-53ae-4d42-b05f-18382b59e246",
    "metadata": {},
    "outputs": [],
    "source": []
