--- a/docs/ventrafiken/07.04_uraniborg_savings.ipynb
+++ b/docs/ventrafiken/07.04_uraniborg_savings.ipynb
@@ -386,7 +386,7 @@
     "Fuel consumption over time\n",
     "```\n",
     "\n",
-    "```{glue:figure} fuel\n",
+    "```{glue:figure} wind\n",
     ":figwidth: 1000px\n",
     ":name: \"wind\"\n",
     "\n",
@@ -569,7 +569,6 @@
     "    fig = grid.figure\n",
     "    fig.suptitle(direction)\n",
     "    \n",
-    "    fig = ax.get_figure()\n",
     "    fig_name = f'{direction}'\n",
     "    glue(fig_name, fig, display=False)"
    ]
@@ -597,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e617e2b9-1005-4372-9663-a7878a4868e2",
+   "id": "49a20380-4caf-4aea-9fc0-28b3baa46491",
    "metadata": {},
    "outputs": [],
    "source": []
