Worked on the ventrafik report.

--- a/docs/ventrafiken/07.04_uraniborg_savings.ipynb
+++ b/docs/ventrafiken/07.04_uraniborg_savings.ipynb
@@ -86,7 +86,7 @@
     "from d2e2f.pipelines.trip_statistics import clean_statistics\n",
     "from scipy.stats import norm\n",
     "from myst_nb import glue\n",
-    "plt.style.use('presentation')\n",
+    "#plt.style.use('presentation')\n",
     "from IPython.display import display, Markdown, Latex"
    ]
   },
@@ -149,7 +149,7 @@
    },
    "outputs": [],
    "source": [
-    "df_stat[\"consumption\"] = df_stat[\"Consumption ME1 (L)\"] + df_stat[\"Consumption ME2 (L)\"]"
+    "#df_stat[\"consumption\"] = df_stat[\"Consumption ME1 (L)\"] + df_stat[\"Consumption ME2 (L)\"]"
    ]
   },
   {
@@ -166,7 +166,13 @@
     "df_stat['item'] = 'raw'\n",
     "df_clean = df_stat.copy()\n",
     "df_clean['item'] = 'clean'\n",
-    "df_clean.dropna(subset=['consumption'], inplace=True)\n",
+    "df_clean.dropna(subset=[\"Consumption ME1 (L)\", \"Consumption ME2 (L)\"], inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "mask = df_clean['consumption'] > 0\n",
+    "df_clean = df_clean.loc[mask].copy()\n",
+    "\n",
     "#mask = df_clean['E'] > df_clean['E'].quantile(0.01) \n",
     "#df_clean = df_clean.loc[mask].copy()"
    ]
@@ -307,53 +313,25 @@
    },
    "outputs": [],
    "source": [
-    "fig,ax=plt.subplots()\n",
-    "fig.set_size_inches(20,15)\n",
-    "\n",
-    "#df_before.plot(y='consumption', label='before', ax=ax, style='b.')\n",
-    "#df_after.plot(y='consumption', label='after', ax=ax, style='g.')\n",
-    "\n",
-    "styles = ['k.','g.','b.']\n",
-    "for style, (period, df_period) in zip(styles,df_.groupby(by='period', sort=False)):\n",
-    "    df_period.plot(y='consumption', label=period, ax=ax, style=style)\n",
-    "\n",
-    "\n",
-    "df_expanding.loc[tänd:].plot(y='consumption', label=f'expanding mean', ax=ax, style='k-', lw=3)\n",
-    "ax.set_ylabel('Fuel consumption [liters]')\n",
-    "ax.legend();\n",
-    "\n",
-    "fig = ax.get_figure()\n",
-    "fig_name = 'fuel'\n",
-    "glue(fig_name, fig, display=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56954998-66a4-46be-af1f-d2b1a7998174",
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "fig,ax=plt.subplots()\n",
-    "fig.set_size_inches(20,15)\n",
-    "\n",
-    "styles = ['k.','g.','b.']\n",
-    "for style, (period, df_period) in zip(styles,df_.groupby(by='period', sort=False)):\n",
-    "    df_period.plot(y='w', label=period, ax=ax, style=style)\n",
-    "\n",
-    "df_expanding.loc[tänd:].plot(y='w', label=f'expanding mean', ax=ax, style='k-', lw=3)\n",
-    "ylims = ax.get_ylim()\n",
-    "ax.set_ylim((0,ylims[1]))\n",
-    "ax.set_ylabel('Wind speed [m/s]')\n",
-    "ax.legend();\n",
-    "\n",
-    "fig = ax.get_figure()\n",
-    "fig_name = 'wind'\n",
-    "glue(fig_name, fig, display=False)"
+    "def plot_periods(y='consumption', ylabel='Fuel consumption [liters]', fig_name = 'fuel'):\n",
+    "    \n",
+    "    fig,ax=plt.subplots()\n",
+    "    fig.set_size_inches(20,10)\n",
+    "    \n",
+    "    styles = ['k.','g.','b.']\n",
+    "    for style, (period, df_period) in zip(styles,df_.groupby(by='period', sort=False)):\n",
+    "        df_period.plot(y=y, label=period, ax=ax, style=style)\n",
+    "    df_expanding.loc[tänd:].plot(y=y, label=f'expanding mean', ax=ax, style='k-', lw=3)\n",
+    "    ax.set_ylabel(ylabel)\n",
+    "    ax.legend();\n",
+    "    \n",
+    "    \n",
+    "    fig = ax.get_figure()\n",
+    "    glue(fig_name, fig, display=False)\n",
+    "    \n",
+    "plot_periods()\n",
+    "plot_periods(y='w', ylabel='Wind speed [m/s]', fig_name='wind')\n",
+    "plot_periods(y='trip_time', ylabel='trip time', fig_name='trip_times')\n"
    ]
   },
   {
@@ -550,6 +528,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9cea6566-157a-4d18-bac1-950d4b868eb7",
+   "metadata": {},
+   "source": [
+    "## Cause analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2281cdb2-dcb9-419a-9e0f-cbba81bfc4a9",
@@ -560,17 +546,23 @@
    },
    "outputs": [],
    "source": [
-    "key ='sog'\n",
+    "keys = ['sog',\n",
+    "       #'Consumption ME1 (L)',\n",
+    "       #'Consumption ME2 (L)',\n",
+    "        'thrust_factor',\n",
+    "       ]\n",
     "\n",
-    "bins = np.linspace(df_[key].min(), df_[key].max(), 100)\n",
     "\n",
-    "for direction, df_direction in df_.groupby(by='trip_direction', sort=False):\n",
-    "    grid = sns.displot(df_direction, x=key, kind='kde', hue='period', common_norm=False);\n",
-    "    fig = grid.figure\n",
-    "    fig.suptitle(direction)\n",
+    "for key in keys:\n",
+    "    bins = np.linspace(df_[key].min(), df_[key].max(), 100)\n",
     "    \n",
-    "    fig_name = f'{direction}'\n",
-    "    glue(fig_name, fig, display=False)"
+    "    for direction, df_direction in df_.groupby(by='trip_direction', sort=False):\n",
+    "        grid = sns.displot(df_direction, x=key, kind='kde', hue='period', common_norm=False);\n",
+    "        fig = grid.figure\n",
+    "        fig.suptitle(direction)\n",
+    "        \n",
+    "        fig_name = f'{key}_{direction}'\n",
+    "        glue(fig_name, fig, display=False)"
    ]
   },
   {
@@ -578,25 +570,131 @@
    "id": "7cf677a5-e4c8-42f1-a70f-ffd5447b797c",
    "metadata": {},
    "source": [
-    "```{glue:figure} Ven-Landskrona\n",
-    ":figwidth: 1000px\n",
-    ":name: \"Ven-Landskrona\"\n",
+    "It seems that the speed has decreased when going from Ven to Landskrona as seen in {numref}`sog_Ven-Landskrona` but not in the other direction as seen in {numref}`sog_Landskrona-Ven`.\n",
     "\n",
-    "Ven-Landskrona\n",
+    "```{glue:figure} sog_Ven-Landskrona\n",
+    ":figwidth: 1000px\n",
+    ":name: \"sog_Ven-Landskrona\"\n",
+    "\n",
+    "Speed over ground: Ven-Landskrona\n",
     "```\n",
     "\n",
-    "```{glue:figure} Landskrona-Ven\n",
+    "```{glue:figure} sog_Landskrona-Ven\n",
     ":figwidth: 1000px\n",
-    ":name: \"Landskrona-Ven\"\n",
+    ":name: \"sog_Landskrona-Ven\"\n",
     "\n",
-    "Landskrona-Ven\n",
-    "```"
+    "Speed over ground: Landskrona-Ven\n",
+    "```\n",
+    "\n",
+    "The Aft thrust allocation factor is representing how much the aft azimuth thruster is contributing, where a value of 1.0 means that only the aft azimuth is working. It can be seen that this factor has changed for trips from Ven to Landskrona as seen in {numref}`thrust_factor_Ven-Landskrona`. For \"släckta skärmar\" the factor is most often 0.5 meaning a 50-50% split between the thrusters. This has changed towards having a larger contribution on the aft asimuth thruster. This change cannot be observered in the other direction as seen in {numref}`thrust_factor_Landskrona-Ven`.\n",
+    "\n",
+    "\n",
+    "```{glue:figure} thrust_factor_Ven-Landskrona\n",
+    ":figwidth: 1000px\n",
+    ":name: \"thrust_factor_Ven-Landskrona\"\n",
+    "\n",
+    "Aft thrust allocation factor: Ven-Landskrona\n",
+    "```\n",
+    "\n",
+    "```{glue:figure} thrust_factor_Landskrona-Ven\n",
+    ":figwidth: 1000px\n",
+    ":name: \"thrust_factor_Landskrona-Ven\"\n",
+    "\n",
+    "Aft thrust allocation factor: Landskrona-Ven\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "49a20380-4caf-4aea-9fc0-28b3baa46491",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "interesting = ['sog','consumption','w']\n",
+    "df_direction_periods = df_.groupby(by=['trip_direction','period'], sort=False).mean().reset_index()\n",
+    "\n",
+    "columns = ['släckta skärmar', 'tända skärmar', 'efter utbildning']\n",
+    "fig,ax=plt.subplots()\n",
+    "df_direction_periods.pivot(index='trip_direction', columns='period', values='sog')[columns].plot.bar(ax=ax)\n",
+    "ax.set_ylabel('sog')\n",
+    "fig,ax=plt.subplots()\n",
+    "df_direction_periods.pivot(index='trip_direction', columns='period', values='consumption')[columns].plot.bar(ax=ax)\n",
+    "ax.set_ylabel('consumption')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54071871-83f3-4a83-8680-2966bbea8d67",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "df_direction_periods.pivot(index='trip_direction', columns='period', values=\"Consumption ME1 (L)\")[columns].plot.bar(ax=ax)\n",
+    "ax.set_ylabel(\"Consumption ME1 (L)\")\n",
+    "fig,ax=plt.subplots()\n",
+    "df_direction_periods.pivot(index='trip_direction', columns='period', values=\"Consumption ME2 (L)\")[columns].plot.bar(ax=ax)\n",
+    "ax.set_ylabel(\"Consumption ME2 (L)\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e63114-7f93-4090-88e5-866c080adfd6",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "df_.plot(x='thrust_factor', y='consumption', style='.', alpha=0.2, ax=ax)\n",
+    "glue('thrust_factor_vs_consumption', fig, display=False)\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "df_.plot(x='thrust_factor', y='aw', style='.', alpha=0.2, ax=ax)\n",
+    "glue('thrust_factor_vs_wind', fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6bf39bb-0f6c-4175-ba2d-1c6069e74662",
+   "metadata": {},
+   "source": [
+    "Trips with a high Aft thrust allocation factor seems to have low consumption as seen in {numref}`thrust_factor_vs_consumption`. So putting much of the power on the aft azimuth thruster seems to reduce the consumption. What is cause and effect is hard to destinguish however. If more power is needed, the forward thruster must be used to help the other thruster at some point. But putting as much power on the aft azimuth thruster as possible, seems to be a good way to reduce fuel consumption. \n",
+    "\n",
+    "```{glue:figure} thrust_factor_vs_consumption\n",
+    ":figwidth: 1000px\n",
+    ":name: thrust_factor_vs_consumption\n",
+    "thrust_factor vs. consumption\n",
+    "```\n",
+    "\n",
+    "The Aft thrust allocation factor has also been plotted versus the apparent wind speed in {numref}`thrust_factor_vs_wind` which is not showing any correlation.\n",
+    "\n",
+    "```{glue:figure} thrust_factor_vs_wind\n",
+    ":figwidth: 1000px\n",
+    ":name: thrust_factor_vs_wind\n",
+    "thrust_factor vs. apparent wind speed\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3efd503-7207-43b8-997a-364ce0fd2bf5",
    "metadata": {},
    "outputs": [],
    "source": []
