Added a pipline to read data from "datavärde"

--- a/docs/ventrafiken/07.04_uraniborg_savings.ipynb
+++ b/docs/ventrafiken/07.04_uraniborg_savings.ipynb
@@ -87,7 +87,8 @@
     "from scipy.stats import norm\n",
     "from myst_nb import glue\n",
     "#plt.style.use('presentation')\n",
-    "from IPython.display import display, Markdown, Latex"
+    "from IPython.display import display, Markdown, Latex\n",
+    "import sympy as sp"
    ]
   },
   {
@@ -697,7 +698,251 @@
    "id": "e3efd503-7207-43b8-997a-364ce0fd2bf5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03a278be-6b88-4e1b-9726-9cf5a66f810c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction = df_.groupby(by='trip_direction').get_group('Ven-Landskrona')\n",
+    "sns.pairplot(df_direction, x_vars=['thrust_factor','sog','aw_x**2*sog','trip_time','beta**2*sog'], y_vars=['consumption','sog'], kind='reg', aspect=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13e3e2a1-1c7d-48a9-88d3-6777c9b0ed27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8b357b0-ec59-4106-83de-9cfaf808f2d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction['Consumption ME1 (L/h)'].hist(bins=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb128e37-dc5b-4dca-ae94-f7feb65146f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction['Consumption ME1 (L/h)'].quantile(0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67ac0228-f8c0-4896-ad72-b13a9eb348b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['thrust_factor','sog','sog**3','aw_x**2*sog','distance']\n",
+    "label = 'consumption'\n",
+    "mask = df_direction['Consumption ME1 (L/h)'] < df_direction['Consumption ME1 (L/h)'].quantile(0.99)\n",
+    "data = df_direction[features + [label]].loc[mask].copy()\n",
+    "\n",
+    "\n",
+    "data.dropna(inplace=True)\n",
+    "X = data[features].copy()\n",
+    "y = data[label].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91398d30-195e-4acd-909c-490420600335",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X=X, y=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f334fb2-c602-4f93-a598-d76b78afd4f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['consumption pred'] = model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "780f55ef-88fb-4c07-9ae4-1e0cfc3a468c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(12,12)\n",
+    "ax.axis('equal')\n",
+    "\n",
+    "ax.plot(data['consumption'], data['consumption pred'], '.')\n",
+    "ax.plot([y.min(),y.max()],[y.min(),y.max()], '-', zorder=-1)\n",
+    "ax.set_xlabel('consumption')\n",
+    "ax.set_ylabel('predicted consumption')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1f73f68-1c1c-4054-9ea9-05d27463da5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r2_score(y_true=data['consumption'], y_pred=data['consumption pred'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1e6df9c-1faa-4a56-a570-4d3594adb910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2 = data.copy()\n",
+    "data2['thrust_factor']=1\n",
+    "X2 = data2[features].copy()\n",
+    "y2 = data2[label].copy()\n",
+    "data2['consumption pred'] = model.predict(X2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bca8bcc9-e1b4-493c-8b15-7b6982ce4ec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,10)\n",
+    "data.plot(y=['consumption'], lw=3, ax=ax)\n",
+    "#data.plot(y=['consumption', 'consumption pred'], ax=ax)\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,10)\n",
+    "data.loc['2021-05-01':'2021-06-01'].plot(y='consumption', lw=3, ax=ax)\n",
+    "data.loc['2021-05-01':'2021-06-01'].plot(y='consumption pred', alpha=0.5, style='r-', lw=3, ax=ax)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d7ba9a3-bea7-4f97-bfdf-b5861b3a3c72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[['consumption','consumption pred']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35da5f41-ab44-45a9-bd70-dbc87d1454e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,10)\n",
+    "data2.loc['2021-05-01':'2021-06-01'].plot(y='consumption', lw=3, ax=ax)\n",
+    "data2.loc['2021-05-01':'2021-06-01'].plot(y='consumption pred', alpha=0.5, style='r-', lw=3, ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9610140b-80a8-4a78-9ade-aa003b7e077c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2[['consumption','consumption pred']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fc7fbbb-7af1-4494-a6ae-115a242152f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2[['consumption','consumption pred']].sum().pct_change()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f783b9b-fbe6-45c0-80de-7e02652e2d4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98e983b0-8a52-4692-96f1-bf4b5210b1de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af2f0ff-5f0f-4efe-9078-c884fa2eaeaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy.parsing.sympy_parser import parse_expr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a187567-7e49-427e-849d-43f5ae78ef3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coef_ = [np.round(c,3) for c in model.coef_]\n",
+    "columns = X.columns\n",
+    "expression_string = \"\".join(f\"{value}*{name}+\" for value, name in zip(coef_, columns))[0:-1]\n",
+    "eq_model = sp.Eq(sp.symbols('consumption'),parse_expr(expression_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b043d008-c498-480c-8e3f-94332769c70d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subs=[\n",
+    "(sp.symbols('sog'), sp.symbols('s_{og}')),\n",
+    "(sp.symbols('thrust_factor'), sp.symbols('c_{thrust}')),\n",
+    "(sp.symbols('distance'), sp.symbols('S')),\n",
+    "(sp.symbols('aw_x'), sp.symbols('a_{w_x}')),\n",
+    "]\n",
+    "eq_model.subs(subs)"
+   ]
   }
  ],
  "metadata": {
