Analyzed the ship and found that optimal speed is around 2 or 13 m/s

--- a/docs/ventrafiken/07.04_uraniborg_savings.ipynb
+++ b/docs/ventrafiken/07.04_uraniborg_savings.ipynb
@@ -943,6 +943,67 @@
     "]\n",
     "eq_model.subs(subs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a9b8328-e459-4872-8724-71662c33fc45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fde63eb-6699-4f4f-9b7d-d166cb4fb5d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7ca365b-8c0d-4181-beae-007dba8df28f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction['rev1**2'] = df_direction['Thruster speed 1 (rpm)']**2\n",
+    "df_direction['J'] = df_direction['sog']/df_direction['Thruster speed 1 (rpm)']\n",
+    "df_direction['Q'] = df_direction['Consumption ME1 (L/h)']/(2*np.pi*df_direction['Thruster speed 1 (rpm)'])\n",
+    "df_direction['Kq'] = df_direction['Q']/(df_direction['Thruster speed 1 (rpm)']**2)\n",
+    "\n",
+    "sns.pairplot(data=df_direction, y_vars=['Kq'], x_vars=['sog','rev1**2','J'], kind='reg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83aae001-973d-4b54-b8b3-3e5c1d5bcc75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction.plot(x=\"thrust_factor\", y=\"consumption\", alpha=0.1, style='.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff9e58ed-b6b0-4bbe-b5f5-45b0a08166fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction.plot(x=\"thrust_factor\", y=\"consumption\", alpha=0.1, style='.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14763c9f-6155-47bd-9960-d281c4dd57d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_direction.plot(x=\"thrust_factor\", y= [\"Consumption ME1 (L)\",\"Consumption ME2 (L)\"], alpha=0.1, style='.')"
+   ]
   }
  ],
  "metadata": {
