--- a/notebooks/10.01_SSRS_read_files.ipynb
+++ b/notebooks/10.01_SSRS_read_files.ipynb
@@ -194,6 +194,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0746fe2c-a077-45b8-a27e-f32f4be19037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parts[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "de47998d-8a17-4fa2-835c-4d4e63fa6550",
    "metadata": {},
    "outputs": [],
